# thermal_pose_tracking_ros

./: CMakeLists.txt  README.md  package.xml
launch/: lwir_pose_tracking.launch
scripts/: seek_pose_tracking.py
